syntax = "proto3";

package usermgmt_op6_rest_to_grpc_chan;

option go_package = "github.com/juanmanuel0963/go_grpc_usermgmt/v5;go_grpc_usermgmt_op6_rest_to_grpc_chan";

service UserManagement {
  rpc CreateNewUser (NewUser) returns (User) {}
  rpc CreateNewContact (NewContact) returns (Contact) {}
  rpc GetUsers (GetUsersParams) returns (UsersList) {}
  rpc GetContacts (GetContactsParams) returns (ContactsList) {}
}

message NewUser {
  string name = 1;
  int32 age = 2;
  string email = 3;
}

message User {
  int32 id = 1; 
  string name = 2;
  int32 age = 3;
  string email = 4;
}

message GetUsersParams {
  string name = 1;
  int32 age = 2;
  string email = 3;
}

message UsersList {
  repeated User users = 1; 
}

message NewContact {
  int32 company_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
}

message Contact {
  int32 id = 1; 
  int32 company_id = 2;
  string first_name = 3;
  string last_name = 4;
  string email = 5;
}

message GetContactsParams {
  int32 company_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
}

message ContactsList {
  repeated Contact contacts = 1; 
}